# Lumous

./: CONTRIBUTING.md  LICENSE  PRD.md  README.md  bunfig.toml  index.html  package-lock.json  package.json  planning.md  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  globals.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  indexer.rs  lib.rs  main.rs  models.rs  thumbnail.rs
src/components/: FileGrid.tsx  FolderExplorer.tsx  FolderTree.tsx  Gallery.tsx  ImageCard.tsx  ImageViewer.tsx  LoadingSpinner.tsx  SearchBar.tsx  Sidebar.tsx  SortDropdown.tsx  Toolbar.tsx  TopBar.tsx  WelcomeScreen.tsx
src/components/ui/: AlertDialog.tsx  DropdownMenu.tsx  Toast.tsx
src/components/views/: GridView.tsx  ListView.tsx  MasonryView.tsx
src/hooks/: useImageLoader.ts
src/lib/: utils.ts
src/store/: galleryStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: sorting.ts
