[package]
name = "local-gallery"
version = "0.1.0"
description = "A lightning-fast, native desktop photo gallery"
authors = ["Local Gallery Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/local-gallery"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "local_gallery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Image processing and filesystem
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "tiff"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
notify = "6.1"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"

# Async utilities
futures = "0.3"
rayon = "1.10"
once_cell = "1.20"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
